--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
 
   "require": {
     "php": ">=5.5.9",
-    "corneltek/cliframework": "~3.0",
+    "symfony/console": "^3.3",
 
     "serps/core": "~0.2.0",
     "serps/search-engine-google": "~0.2.0",
